<resources>
    <string name="customisation_settings_title">Fluid Customisation</string>
    <string name="customisation_themes">Themes</string>
    <string name="customisation_statusbar">Status Bar</string>
    <string name="customisation_qs">QS</string>
    <string name="customisation_lockscreen">Lockscreen</string>
    <string name="customisation_extras">Extras</string>
    <string name="clocksettings_title">Clock Settings</string>
    <string name="clocksettings_summary">Statusbar clock settings</string>
    <string name="trafficsettings_title">Traffic Indicator</string>
    <string name="trafficsettings_summary">Statusbar/Header traffic indicator settings</string>
    <string name="customisation_systemtheme">System Theme</string>
    <string name="status_bar_clock_date_title">Clock and Date</string>
    <string name="status_bar_clock_date_summary">Customize your statusbar clock and date</string>
    <string name="status_bar_clock_title">Clock settings</string>
    <string name="status_bar_clock_show">Show clock and date</string>
    <string name="status_bar_clock_style_title">Clock style</string>
    <string name="status_bar_clock_style_right">Right</string>
    <string name="status_bar_clock_style_center">Center</string>
    <string name="status_bar_clock_style_left">Left</string>
    <string name="status_bar_date_title">Date settings</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_am_pm_info">24-hour clock is enabled</string>
    <string name="status_bar_am_pm_normal">Normal</string>
    <string name="status_bar_am_pm_small">Small</string>
    <string name="status_bar_am_pm_hidden">Hidden (default)</string>
    <string name="clock_seconds_display">Show seconds</string>
    <string name="clock_date_display">Date</string>
    <string name="clock_date_display_summary">Display custom date before the clock</string>
    <string name="clock_date_display_none">Don\'t show</string>
    <string name="clock_date_display_small">Small font size</string>
    <string name="clock_date_display_normal">Normal font size</string>
    <string name="clock_date_style">Date style</string>
    <string name="clock_date_style_normal">Normal</string>
    <string name="clock_date_style_lowercase">Lowercase</string>
    <string name="clock_date_style_uppercase">Uppercase</string>
    <string name="clock_date_format_custom">Custom java format</string>
    <string name="clock_date_format">Date format</string>
    <string name="clock_date_string_edittext_title">Must be in DateFormat eg. MM/dd/yy</string>
    <string name="clock_date_string_edittext_summary">Enter string</string>
    <string name="clock_date_right">Right of time</string>
    <string name="clock_date_left">Left of time</string>
    <string name="clock_date_position">Date position</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="volume_rocker_wake_title">Volume rocker wake</string>
    <string name="volume_rocker_wake_summary">Pressing the volume keys will wake your device</string>
    <string name="show_fourg_title">Show 4G instead of LTE</string>
    <string name="show_fourg_summary">Replaces LTE statusbar indicators with 4G</string>
    <string name="data_disabled_icon_title">Data disabled icon</string>
    <string name="data_disabled_icon_summary">Display a cross sign next to signal bar when data is disabled</string>
    <string name="roaming_indicator_icon_title">Roaming indicator</string>
    <string name="roaming_indicator_icon_summary">Display the roaming indicator in signal icon when in roaming mode</string>
    <string name="lockscreen_battery_info_title">Lockscreen charging info</string>
    <string name="lockscreen_battery_info_summary">Display negociated charger max current and voltage and battery temperature on lockscreen while charging</string>
    <string name="double_tap_sleep_gesture_title">Double tap to sleep</string>
    <string name="double_tap_sleep_gesture_summary">Double tap on the status bar to put the device to sleep</string>
    <string name="double_tap_sleep_lockscreen_title">Double tap to sleep</string>
    <string name="double_tap_sleep_lockscreen_summary">Double tap anywhere on the lockscreen to put phone to sleep</string>
    <string name="use_old_mobiletype_title">Use old style mobile data icons</string>
    <string name="use_old_mobiletype_summary">Use pre-p mobiletype icons for signal (Reboot required)</string>
    <string name="quick_settings_vibrate_title">Vibrate on touch</string>
    <string name="quick_settings_vibrate_summary">Vibrate when touching QS tiles</string>
    <string name="tuner_title">Statusbar Icon Tuner</string>
    <string name="tuner_summary">Control visibility of status bar icons</string>
    <string name="allow_signature_fake">Allow signature spoofing</string>
    <string name="allow_signature_fake_summary">Allow apps to bypass security systems by pretending to be a different app. Mainly used for MicroG.</string>
    <string name="network_traffic_settings_title">Network traffic monitor</string>
    <string name="network_traffic_settings_summary">Display and customize current network traffic levels</string>
    <string name="network_traffic_location_title">Location</string>
    <string name="network_traffic_location_disable">Disabled</string>
    <string name="network_traffic_location_statusbar">Statusbar</string>
    <string name="network_traffic_location_quick_statusbar">Quick Statusbar</string>
    <string name="network_traffic_mode_title">Display mode</string>
    <string name="network_traffic_mode_up">Upload only</string>
    <string name="network_traffic_mode_down">Download only</string>
    <string name="network_traffic_mode_all">Upload and download</string>
    <string name="network_traffic_autohide">Auto hide</string>
    <string name="network_traffic_autohide_summary">Hide the traffic monitor when inactive</string>
    <string name="network_traffic_autohide_kilobits">Kb/s</string>
    <string name="network_traffic_autohide_kilobytes">KB/s</string>
    <string name="network_traffic_autohide_threshold">Inactivity threshold</string>
    <string name="network_traffic_show_units">Show units</string>
    <string name="network_traffic_show_units_summary">Whether to show traffic measurement units</string>
    <string name="network_traffic_units_title">Traffic measurement units</string>
    <string name="network_traffic_units_bits">Bits per second (b/s)</string>
    <string name="network_traffic_units_kilobits">Kilobits per second (kb/s)</string>
    <string name="network_traffic_units_megabits">Megabits per second (Mb/s)</string>
    <string name="network_traffic_units_bytes">Bytes per second (B/s)</string>
    <string name="network_traffic_units_kilobytes">Kilobytes per second (kB/s)</string>
    <string name="network_traffic_units_megabytes">Megabytes per second (MB/s)</string>
    <string name="network_traffic_hidearrow">Hide arrows</string>
    <string name="network_traffic_hidearrow_summary">Hide the network traffic indicator arrows</string>
    <string name="network_traffic_refresh_interval_title">Refresh interval</string>
    <string name="network_traffic_refresh_interval_summary">Duration after which speed is remeasured</string>
    <string name="unit_seconds">seconds</string>
    <string name="qs_media_player_title">QS Media player</string>
    <string name="qs_media_player_summary_on">Showing media player in QS.\nRequires a SystemUI restart</string>
    <string name="qs_media_player_summary_off">Showing media player as a notification.\nRequires a SystemUI restart</string>
    <string name="navigation_bar_arrow_keys_title">IME arrows</string>
    <string name="navigation_bar_arrow_keys_summary">Show arrow keys on navbar while typing</string>
    <string name="navigation_bar_inverse_title">Inverse layout</string>
    <string name="navbar_layout_title">Layout</string>
    <string name="navbar_layout_normal">Normal</string>
    <string name="navbar_layout_compact">Compact</string>
    <string name="navbar_layout_leftleaning">Left-leaning</string>
    <string name="navbar_layout_rightleaning">Right-leaning</string>
    <string name="pocket_judge_title">Pocket detection</string>
    <string name="pocket_judge_summary">Block screen inputs when device is in pocket</string>
    <string name="fod_recog_animation">FOD recognizing animation</string>
    <string name="fod_recog_animation_summary">Shows animation while reading your finger</string>
    <string name="battery_style_title">Battery Style</string>
    <string name="battery_style_port">Portrait</string>
    <string name="battery_style_circle">Circle</string>
    <string name="battery_style_text">Text</string>
    <string name="battery_percent_title">Show percent</string>
    <string name="battery_percent_summary">Always show the battery percent with the icon</string>
    <string name="battery_percent_inside_title">Show percent inside</string>
    <string name="battery_percent_inside_summary">Show percent inside the icon</string>
    <string name="incall_vibration_category">In-call vibration</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_connect_summary">Enable to vibrate after call connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_call_wait_summary">Enable to vibrate while call is on waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="incall_vibrate_disconnect_summary">Enable to vibrate after call disconnect</string>
    <string name="fprint_sucess_vib_title">Fingerprint authentication vibration</string>
    <string name="fprint_sucess_vib_summary">Vibrate on successful fingerprint authentication</string>
    <string name="always_on_display_schedule_title">Always on display schedule</string>
    <string name="always_on_display_schedule_sunset">Sunset</string>
    <string name="always_on_display_schedule_sunrise">Sunrise</string>
    <string name="always_on_display_schedule_mixed_sunset">Turns on from sunset till a time</string>
    <string name="always_on_display_schedule_mixed_sunrise">Turns on from a time till sunrise</string>
    <string name="disabled">Disabled</string>
    <string name="show_app_volume_title">Per-app volume control</string>
    <string name="show_app_volume_summary">Control app volume from volume panel</string>
    <string name="cutout_main">Display Cutout</string>
    <string name="cutout_main_summary">They really cut corners with this one</string>
    <string name="display_cutout_style_title">Cutout style</string>
    <string name="display_cutout_style_normal">Normal</string>
    <string name="display_cutout_style_immerse">Immerse</string>
    <string name="display_cutout_style_hide">Hide</string>
    <string name="stock_statusbar_in_hide">Stock statusbar height</string>
    <string name="stock_statusbar_in_hide_summary">Use default statusbar height in Hide</string>
    <string name="themes_ui">UI</string>
    <string name="theme_customization_sysui_icon_title">System Theme</string>
    <string name="clock_style_title">Lockscreen clock</string>
    <string name="clock_style_summary">Customize your lockscreen clock</string>
    <string name="accent_prebuilt">Accent color - Prebuilt</string>
    <string name="accent_prebuilt_summary">Pick an accent color from our predone selections!</string>
    <string name="theme_customization_systemui_title">Primary Theme</string>
    <string name="lock_screen_custom_clock_face_category">Lockscreen Clock</string>
    <string name="lock_screen_custom_clock_face_title">Lockscreen clock style</string>
    <string name="lock_screen_custom_clock_face_default">Default</string>
</resources>