<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 ProjectFluid

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/customisation_statusbar" >

    <Preference
	android:key="clock_settings"
        android:title="@string/clocksettings_title"
        android:summary="@string/clocksettings_summary"
        android:fragment="com.fluid.customisation.fragments.ClockSettings"
        android:icon="@drawable/ic_settings_clock" />

    <com.fluid.customisation.preference.SystemSettingListPreference
         android:key="status_bar_battery_style"
         android:title="@string/battery_style_title"
         android:dialogTitle="@string/battery_style_title"
         android:entries="@array/status_bar_battery_style_entries"
         android:entryValues="@array/status_bar_battery_style_values"
         android:persistent="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
         android:key="status_bar_show_battery_percent"
         android:title="@string/battery_percent_title"
         android:summary="@string/battery_percent_summary"
         android:defaultValue="false"
         android:persistent="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
         android:key="status_bar_show_battery_percent_inside"
         android:title="@string/battery_percent_inside_title"
         android:summary="@string/battery_percent_inside_summary"
         android:defaultValue="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
         android:key="double_tap_sleep_gesture"
         android:title="@string/double_tap_sleep_gesture_title"
         android:summary="@string/double_tap_sleep_gesture_summary"
         android:defaultValue="false" />

    <com.fluid.customisation.preference.SecureSettingSwitchPreference
        android:key="use_old_mobiletype"
        android:title="@string/use_old_mobiletype_title"
        android:summary="@string/use_old_mobiletype_summary"
        android:defaultValue="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="show_fourg"
        android:title="@string/show_fourg_title"
        android:summary="@string/show_fourg_summary"
        android:defaultValue="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="volte_icon"
        android:title="@string/volte_switch_title"
        android:summary="@string/volte_switch_summary"
        android:defaultValue="true" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="data_disabled_icon"
        android:title="@string/data_disabled_icon_title"
        android:summary="@string/data_disabled_icon_summary"
        android:defaultValue="true" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="roaming_indicator_icon"
        android:title="@string/roaming_indicator_icon_title"
        android:summary="@string/roaming_indicator_icon_summary"
        android:defaultValue="true" />

    <PreferenceScreen
        android:key="icon_tuner"
        android:summary="@string/tuner_summary"
        android:title="@string/tuner_title">
        <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
    </PreferenceScreen>

</PreferenceScreen>
