<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2020 ProjectFluid

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
    android:title="@string/customisation_extras" >

     <com.fluid.customisation.preference.SystemSettingSwitchPreference
            android:key="volume_button_music_control"
            android:summary="@string/volume_rocker_music_controls_summary"
            android:title="@string/volume_rocker_music_controls_title"
            android:defaultValue="false" />

        <com.fluid.customisation.preference.GlobalSettingSwitchPreference
            android:key="allow_signature_fake"
            android:title="@string/allow_signature_fake"
            android:summary="@string/allow_signature_fake_summary"
            android:defaultValue="false" />


    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="navigation_bar_arrow_keys"
        android:title="@string/navigation_bar_arrow_keys_title"
        android:summary="@string/navigation_bar_arrow_keys_summary"
        android:defaultValue="false" />

    <com.fluid.customisation.preference.SystemSettingSwitchPreference
        android:key="navigation_bar_inverse"
        android:title="@string/navigation_bar_inverse_title"
        android:defaultValue="false" />

    <com.fluid.customisation.preference.SystemSettingListPreference
        android:key="navbar_layout_views"
        android:title="@string/navbar_layout_title"
        android:summary="%s"
        android:entries="@array/navbar_layout_entries"
        android:entryValues="@array/navbar_layout_values"
        android:defaultValue="default" />
</PreferenceScreen>
