<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (C) 2020 ProjectFluid

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_themes"
        android:icon="@drawable/ic_fluid_themes"
        android:title="@string/customisation_themes" />
 
    <item
        android:id="@+id/navigation_statusbar"
        android:icon="@drawable/ic_fluid_statusbar"
        android:title="@string/customisation_statusbar" />
 
    <item
        android:id="@+id/navigation_qs"
        android:icon="@drawable/ic_fluid_qs"
        android:title="@string/customisation_qs" />

    <item
        android:id="@+id/navigation_navigation"
        android:icon="@drawable/ic_fluid_navigation"
        android:title="@string/customisation_navigation" />
 
    <item
        android:id="@+id/navigation_extras"
        android:icon="@drawable/ic_fluid_extras"
        android:title="@string/customisation_extras" />
</menu>